--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -20,6 +20,6 @@ $info      : #424242;
 
 $warning   : #F5C982;
 $negative  : #F15F58;
-$positive  : #9ac1da;
+$positive  : #66b779;
 
 $dark      : #212121;
