--- a/src/css/text-styles.scss
+++ b/src/css/text-styles.scss
@@ -6,6 +6,10 @@ body, .q-date *, .q-time * {
   font-size: 1rem;
 }
 
+.xxl-font-size {
+  font-size: 2.1rem;
+}
+
 .xl-font-size {
   font-size: 1.5rem;
 }
