Added date and time components

--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -16,7 +16,7 @@
 $primary   : #6b1803;
 $secondary : #efd1a9;
 $accent    : #6b1803;
-$info      : #424242;
+$info      : #6b1803;
 
 $warning   : #F5C982;
 $negative  : #F15F58;
