--- a/src/css/theme.scss
+++ b/src/css/theme.scss
@@ -1,5 +1,5 @@
 .body--light {
-  --active: #155195;
+  --active: #6b1803;
   --contrast-1: #FFFFFF;
   --contrast-2: #F5F5F5;
   --contrast-3: #EEEEEE;
@@ -18,13 +18,13 @@
   --q-primary: #212121;
   --q-secondary: #efd1a9;
   --q-accent: #efd1a9;
-  --q-info: #FAFAFA;
+  --q-info: #a24d37;
   --q-dark: #212121;
   --q-positive: #66b779;
   --q-warning: #B29C76;
   --q-negative: #ec6464;
 
-  --active: #9ac1da;
+  --active: #bb863d;
   --contrast-1: #212121;
   --contrast-2: #424242;
   --contrast-3: #616161;
